2010-01-09  Ulrich Drepper  <drepper@redhat.com>

	* conform/conformtest.pl: Update for XPG7 and some bug fixes.
	* conform/data/ctype.h-data: Likewise.
	* conform/data/dirent.h-data: Likewise.
	* conform/data/errno.h-data: Likewise.
	* conform/data/fcntl.h-data: Likewise.
	* conform/data/fmtmsg.h-data: Likewise.
	* conform/data/fnmatch.h-data: Likewise.
	* conform/data/ftw.h-data: Likewise.
	* conform/data/glob.h-data: Likewise.
	* conform/data/grp.h-data: Likewise.
	* conform/data/iconv.h-data: Likewise.
	* conform/data/langinfo.h-data: Likewise.
	* conform/data/libgen.h-data: Likewise.
	* conform/data/limits.h-data: Likewise.
	* conform/data/locale.h-data: Likewise.
	* conform/data/math.h-data: Likewise.
	* conform/data/monetary.h-data: Likewise.
	* conform/data/mqueue.h-data: Likewise.
	* conform/data/ndbm.h-data: Likewise.
	* conform/data/netdb.h-data: Likewise.
	* conform/data/pthread.h-data: Likewise.
	* conform/data/pwd.h-data: Likewise.
	* conform/data/regex.h-data: Likewise.
	* conform/data/sched.h-data: Likewise.
	* conform/data/search.h-data: Likewise.
	* conform/data/semaphore.h-data: Likewise.
	* conform/data/setjmp.h-data: Likewise.
	* conform/data/signal.h-data: Likewise.
	* conform/data/spawn.h-data: Likewise.
	* conform/data/stdio.h-data: Likewise.
	* conform/data/stdlib.h-data: Likewise.
	* conform/data/string.h-data: Likewise.
	* conform/data/strings.h-data: Likewise.
	* conform/data/sys/ipc.h-data: Likewise.
	* conform/data/sys/msg.h-data: Likewise.
	* conform/data/sys/resource.h-data: Likewise.
	* conform/data/sys/sem.h-data: Likewise.
	* conform/data/sys/shm.h-data: Likewise.
	* conform/data/sys/socket.h-data: Likewise.
	* conform/data/sys/stat.h-data: Likewise.
	* conform/data/sys/time.h-data: Likewise.
	* conform/data/sys/types.h-data: Likewise.
	* conform/data/sys/uio.h-data: Likewise.
	* conform/data/sys/wait.h-data: Likewise.
	* conform/data/syslog.h-data: Likewise.
	* conform/data/tar.h-data: Likewise.