@@ -36,11 +36,14 @@ type va_list
 type size_t
 #if defined XOPEN2K8 || defined POSIX2008
 type off_t
+type ssize_t
 #endif
 
 function void clearerr (FILE*)
 function {char*} ctermid (char*)
+#if !defined XOPEN2K && !defined XOPEN2K8 && !defined POSIX2008
 function {char*} cuserid (char*)
+#endif
 #if defined XOPEN2K8 || defined POSIX2008
 function int dprintf (int, const char*, ...)
 #endif
